--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </div>
 
         <div class="form-group text-right">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalAddTask"><i class="glyphicon glyphicon-plus"></i> Add task</button>
+			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalAddTask"><i class="glyphicon glyphicon-plus"></i> Add task</button>
+			<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalRemoveAll"><i class="glyphicon glyphicon-remove"></i> Remove all</button>
         </div>
 
 		<ul class="nav nav-tabs" role="tablist">
@@ -38,6 +39,40 @@
 				<ul class="list-group" data-status="3"></ul>
 			</div>
 		</div>
+
+		<div >
+			<div class="panel-container col-md-4">
+				<div class="panel panel-danger ">
+					<div class="panel-heading">
+						<h3 class="panel-title">Should be done</h3>
+					  </div>
+					  <div class="panel-body">
+						Tasks count: <span class="badge badge-secondary" id="shouBeDone"></span>
+					  </div>
+				</div>
+			</div>
+			<div class="panel-container col-md-4">
+				<div class="panel panel-warning">
+					<div class="panel-heading">
+						<h3 class="panel-title">Will be done soon</h3>
+					</div>
+					<div class="panel-body">
+						Tasks count: <span class="badge badge-secondary" id="doneSoon"></span>
+					</div>
+				</div>
+			</div>
+			<div class="panel-container col-md-4">
+				<div class="panel panel-success">
+					<div class="panel-heading">
+						<h3 class="panel-title">Already done</h3>
+					</div>
+					<div class="panel-body">
+						Tasks count: <span class="badge badge-secondary" id="alreadyDone"></span>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 </div>
 
 <!-- Modal -->
@@ -63,10 +98,38 @@
 				<button class="btn btn-danger" data-dismiss="modal">Cancel</button>
 				<button class="btn btn-success" form="formAddTask">Ok</button>
 			</div>
-		</div>
+		</div> 
 	</div>
 </div>
-    <script src="scripts/script.js"></script>
-    <script type="module" src="scripts/index.js"></script>
+
+<div class="modal fade" id="modalRemoveAll" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h4 class="modal-title">Remove all tasks</h4>
+			</div>
+
+			<div class="modal-body">
+				<form id="removeAll">
+				<p>
+						Are you sure you want to remove all tasks?	
+				</p>
+			</form>				
+			</div>
+
+			<div class="modal-footer">
+				<button class="btn btn-danger" data-dismiss="modal">Cancel</button>
+				<button class="btn btn-success" form="removeAll">Yes</button>
+			</div>
+		</div> 
+	</div>
+</div>
+
+
+
+    <script type="module" src="scripts/script.js"></script>
 </body>
 </html>
