--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css">
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script> -->
     <title>Day 18</title>
 </head>
 <body>
@@ -41,7 +45,7 @@
 		</div>
 
 		<div >
-			<div class="panel-container col-md-4">
+			<div class="panel-container col-md-4 col-sm-4">
 				<div class="panel panel-danger ">
 					<div class="panel-heading">
 						<h3 class="panel-title">Should be done</h3>
@@ -51,7 +55,7 @@
 					  </div>
 				</div>
 			</div>
-			<div class="panel-container col-md-4">
+			<div class="panel-container col-md-4 col-sm-4">
 				<div class="panel panel-warning">
 					<div class="panel-heading">
 						<h3 class="panel-title">Will be done soon</h3>
@@ -61,7 +65,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="panel-container col-md-4">
+			<div class="panel-container col-md-4 col-sm-4">
 				<div class="panel panel-success">
 					<div class="panel-heading">
 						<h3 class="panel-title">Already done</h3>
@@ -76,6 +80,7 @@
 </div>
 
 <!-- Modal -->
+<!-- Add task -->
 <div class="modal fade" id="modalAddTask" tabindex="-1" role="dialog" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
@@ -90,6 +95,7 @@
 				<form id="formAddTask">
 					<div class="form-group">
 						<input type="text" name="title" placeholder="Title" autofocus="true" class="form-control">
+						<textarea name="info" class="form-control"></textarea>
 					</div>
 				</form>
 			</div>
@@ -102,6 +108,7 @@
 	</div>
 </div>
 
+<!-- Remove all -->
 <div class="modal fade" id="modalRemoveAll" tabindex="-1" role="dialog" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
@@ -123,6 +130,42 @@
 			<div class="modal-footer">
 				<button class="btn btn-danger" data-dismiss="modal">Cancel</button>
 				<button class="btn btn-success" form="removeAll">Yes</button>
+			</div>
+		</div> 
+	</div>
+</div>
+
+<!-- Edit -->
+
+<div class="modal fade" id="modalEditTask" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h4 class="modal-title">Edit task</h4>
+			</div>
+
+			<div class="modal-body">
+				<form id="formEditTask">
+					<input type="hidden" name="id">
+					<div class="form-group">
+						<input type="text" name="title" placeholder="Title" autofocus="true" class="form-control">
+					</div>
+					<div class="form-group">
+						<select name="status" class="form-control">
+							<option value="1">To do</option>
+							<option value="2">In progress</option>
+							<option value="3">Done</option>
+						</select>
+					</div>
+				</form>
+			</div>
+
+			<div class="modal-footer">
+				<button class="btn btn-danger" data-dismiss="modal">Cancel</button>
+				<button class="btn btn-success" form="formEditTask">Ok</button>
 			</div>
 		</div> 
 	</div>
