--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
 	<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css">
+	<link rel="stylesheet" href="./node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="./node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+
+
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script> -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script> -->
@@ -95,8 +98,20 @@
 				<form id="formAddTask">
 					<div class="form-group">
 						<input type="text" name="title" placeholder="Title" autofocus="true" class="form-control">
+					</div>
+					<div class="form-group">
+						<div class="input-group date" data-provide="datepicker">
+							<input type="text" name="date" class="form-control" placeholder="mm/dd/yyyy">
+							<div class="input-group-addon">
+								<span class="glyphicon glyphicon-calendar"></span>
+							</div>
+						</div>
+					</div>
+					<div class="form-group">
 						<textarea name="info" class="form-control"></textarea>
 					</div>
+						
+					
 				</form>
 			</div>
 
@@ -135,6 +150,7 @@
 	</div>
 </div>
 
+
 <!-- Edit -->
 
 <div class="modal fade" id="modalEditTask" tabindex="-1" role="dialog" aria-hidden="true">
@@ -159,6 +175,17 @@
 							<option value="2">In progress</option>
 							<option value="3">Done</option>
 						</select>
+					</div>
+					<div class="form-group">
+						<div class="input-group date" data-provide="datepicker">
+							<input type="text" name="date" class="form-control"  placeholder="mm/dd/yyyy">
+							<div class="input-group-addon">
+								<span class="glyphicon glyphicon-calendar"></span>
+							</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<textarea name="info" class="form-control"></textarea>
 					</div>
 				</form>
 			</div>
